--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-popper": "^1.3.11",
