--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-popper": "^1.3.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-transition-group": "^1.2.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.1"
   },
